--- a/TimeWindowCompactionStrategy/pom.xml
+++ b/TimeWindowCompactionStrategy/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>org.apache.cassandra</groupId>
       <artifactId>cassandra-all</artifactId>
-      <version>2.1.12</version>
+      <version>2.1.19-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
